test/tests/stages/18_structures/invalid_types/invalid_incomplete_structs/incomplete_return_type_funcall.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[24]:
  struct
  identifier(s)
  ;
  struct
  identifier(s)
  identifier(f)
  (
  void
  )
  ;
  int
  identifier(main)
  (
  void
  )
  {
  identifier(f)
  (
  )
  ;
  return
  const int(0)
  ;
  }
